--- a/style.css
+++ b/style.css
@@ -2,10 +2,47 @@ body {
     background-color: #fff7e4;
     color: black;
     font-family: sans-serif;
+    font-size: 100%;
     margin: auto;
-    width: 1200px;
     max-width: 95%;
     border: 2px groove;
     padding: 10px;
     text-align: center;
+}
+
+.pane-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: auto;
+    align-content: start;
+}
+
+.header {
+    /*background: tomato;*/
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2vw;
+    font-weight: bold;
+}
+
+.pane {
+    flex: 1 0 auto;
+    margin: 5px;
+}
+
+.controls-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: auto;
+    align-content: start;
+}
+
+textarea {
+    resize: none;
+    width: 100%;
+    height: 70vh;
+    background: black;
+    color: lime;
+    font-weight: bold;
 }
