--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ body {
     text-align: center;
 }
 
+.header {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2vw;
+    font-weight: bold;
+}
+
 .pane-container {
     display: flex;
     flex-flow: row wrap;
@@ -18,16 +24,20 @@ body {
     align-content: start;
 }
 
-.header {
-    /*background: tomato;*/
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 2vw;
-    font-weight: bold;
-}
-
 .pane {
     flex: 1 0 auto;
     margin: 5px;
+}
+
+.pane>textarea {
+    resize: none;
+    width: 98%;
+    height: 60vh;
+    background: black;
+    color: lime;
+    font-weight: bold;
+    border-radius: 10px;
+    border: 5px solid transparent;
 }
 
 .controls-container {
@@ -36,13 +46,34 @@ body {
     justify-content: center;
     align-items: auto;
     align-content: start;
+    margin: 5px;
 }
 
-textarea {
-    resize: none;
-    width: 100%;
-    height: 70vh;
+.controls-container>textarea {
+    width: 40%;
+    height: 10vh;
     background: black;
     color: lime;
     font-weight: bold;
+    border-radius: 5px;
+    border: 5px solid transparent;
+    margin: 5px
+}
+
+.controls-container>input[type=button] {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 1.5em;
+    padding: 5px 10px;
+    margin: 5px;
+    border: outset;
+    border-radius: 5px;
+}
+
+#resetall:hover {
+    background: lightpink;
+}
+
+#run:hover,#step:hover {
+    background: palegreen;
 }
