--- a/style.css
+++ b/style.css
@@ -10,6 +10,48 @@ html, body {
     text-align: center;
 }
 
+#haze {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.5);
+}
+
+#alert {
+    font-family: 'Courier New', Courier, monospace;
+    color: black;
+    padding: 20px;
+    background: goldenrod;
+    position: fixed;
+    display: none;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    border-radius: 10px;
+    transform: translate(-50%, -50%);
+}
+
+#closealert {
+    margin-left: 20px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5em;
+    line-height: 20px;
+    float: right;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#closealert:hover {
+    color: black;
+}
+
 .app-container {
     display: flex;
     flex-flow: row wrap;
@@ -86,11 +128,11 @@ footer {
     background: aqua;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     align-items: auto;
     align-content: start;
     margin: auto;
-    height: 20%
+    height: 10%
 }
 
 .controls-container>textarea {
