--- a/style.css
+++ b/style.css
@@ -132,11 +132,21 @@ footer {
     align-items: auto;
     align-content: start;
     margin: auto;
-    height: 10%
+    min-height: 10%;
+    max-height: 20%;
 }
 
-.controls-container>textarea {
-    width: 40%;
+.control {
+    flex: 1 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+    max-width: 50%;
+    max-height: 100%;
+}
+
+.control>textarea {
+    width: 100%;
+    max-height: 95%;
     background: black;
     color: lime;
     font-weight: bold;
@@ -146,7 +156,7 @@ footer {
     
 }
 
-.controls-container>input[type=button] {
+.control>input[type=button] {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 1.5em;
