--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html, body {
 
 #closealert {
     margin-left: 20px;
-    color: white;
+    color: black;
     font-weight: bold;
     font-size: 1.5em;
     line-height: 20px;
@@ -49,7 +49,7 @@ html, body {
 }
 
 #closealert:hover {
-    color: black;
+    color: white;
 }
 
 .app-container {
@@ -137,16 +137,16 @@ footer {
 }
 
 .control {
-    flex: 1 0 auto;
+    flex: 0 0 auto;
     display: flex;
     flex-flow: row wrap;
+    min-width: 40%;
     max-width: 50%;
-    max-height: 100%;
 }
 
 .control>textarea {
     width: 100%;
-    max-height: 95%;
+    max-height: 94%;
     background: black;
     color: lime;
     font-weight: bold;
