--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@ html, body {
     font-family: sans-serif;
     font-size: 100%;
     margin: auto;
-    max-width: 97%;
-    height: 95%;
-    padding: 0.5%;
+    max-width: 98%;
+    height: 96%;
     text-align: center;
 }
 
@@ -72,10 +71,15 @@ html, body {
     font-weight: bold;
 }
 
-footer {
+.footer {
+    background:darkolivegreen;
+    color:white;
     font-family: 'Courier New', Courier, monospace;
-    text-align: left;
-    
+    position: fixed;
+    left:0;
+    bottom:0;
+    padding:0.5% 2% 0.5% 2%;
+    width: 96%;
 }
 
 .pane-container {
@@ -85,7 +89,8 @@ footer {
     justify-content: center;
     align-items: auto;
     align-content: start;
-    height: 70%
+    height: 70%;
+    border-bottom: 5px solid black;
 }
 
 .io-cont-container {
@@ -127,13 +132,15 @@ footer {
 .controls-container {
     background: aqua;
     display: flex;
-    flex-direction: row;
+    flex-flow: row nowrap;
+    flex-grow: 3;
     justify-content: left;
     align-items: auto;
     align-content: start;
     margin: auto;
     min-height: 10%;
     max-height: 20%;
+    padding: 10px;
 }
 
 .control {
@@ -146,14 +153,15 @@ footer {
 
 .control>textarea {
     width: 100%;
+    min-height: 89%;
     max-height: 94%;
+    min-width: 98%;
     background: black;
     color: lime;
     font-weight: bold;
     border-radius: 5px;
     border: solid transparent;
-    margin: 0px 5px;
-    
+    margin-right: 5px;
 }
 
 .control>input[type=button] {
@@ -166,10 +174,26 @@ footer {
     border-radius: 5px;
 }
 
+.control>input[type=button]:hover {
+    background: lightgray;
+}
+
+.control>input[type=button]:active {
+    background: silver;
+}
+
 #resetall:hover {
     background: lightpink;
 }
 
+#resetall:active {
+    background: lightcoral;
+}
+
 #run:hover,#step:hover {
     background: palegreen;
+}
+
+#run:active,#step:active {
+    background: springgreen;
 }
