--- a/style.css
+++ b/style.css
@@ -120,14 +120,15 @@ html, body {
 textarea {
     background: black;
     color: lime;
+    border: solid transparent;
+    border-radius: 10px;
+    padding: 5px;
 }
 
 .io-cont-container>textarea {
     height: 50%;
     resize: none;
     font-weight: bold;
-    border-radius: 10px;
-    border: solid transparent;
 }
 
 .pane {
@@ -141,8 +142,6 @@ textarea {
     height:100%;
     resize: none;
     font-weight: bold;
-    border-radius: 10px;
-    border: solid transparent;
 }
 
 .controls-container {
@@ -175,8 +174,6 @@ textarea {
     max-height: 100%;
     min-width: 100%;
     font-weight: bold;
-    border-radius: 10px;
-    border: solid transparent;
     
 }
 
