--- a/style.css
+++ b/style.css
@@ -1,13 +1,55 @@
+/* Global properties */
+
 html, body {
     background-color: #fff7e4;
     color: black;
-    font-family: sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 100%;
     margin: auto;
     max-width: 98%;
     height: 96%;
     text-align: center;
 }
+
+textarea {
+    background: black;
+    color: lime;
+    border: solid transparent;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+input[type=button] {
+    background: rgb(240,240,240);
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 1.5em;
+    padding: 5px 10px;
+    margin: 2px 5px;
+    border: solid;
+    border-radius: 10px;
+}
+
+input[type=file] {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 1em;
+    padding: 5px 10px;
+    margin: 2px 5px;
+    border: solid;
+    border-radius: 10px;
+}
+
+input[type=button]:hover {
+    background: lightgray !important;
+}
+
+input[type=button]:active {
+    background: silver !important;
+}
+
+/* Contextual properties */
 
 #haze {
     position: fixed;
@@ -98,7 +140,6 @@ html, body {
 }
 
 .pane-container {
-    /*background: tomato;*/
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -117,13 +158,7 @@ html, body {
     height: 100%
 }
 
-textarea {
-    background: black;
-    color: lime;
-    border: solid transparent;
-    border-radius: 10px;
-    padding: 5px;
-}
+
 
 .io-cont-container>textarea {
     height: 50%;
@@ -145,7 +180,6 @@ textarea {
 }
 
 .controls-container {
-    /*background: aqua;*/
     display: flex;
     flex-flow: row nowrap;
     flex-grow: 3;
@@ -175,36 +209,6 @@ textarea {
     min-width: 100%;
     font-weight: bold;
     
-}
-
-input[type=button] {
-    background: rgb(240,240,240);
-    box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    font-size: 1.5em;
-    padding: 5px 10px;
-    margin: 2px 5px;
-    border: solid;
-    border-radius: 10px;
-}
-
-input[type=file] {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    font-size: 1em;
-    padding: 5px 10px;
-    margin: 2px 5px;
-    border: solid;
-    border-radius: 10px;
-}
-
-input[type=button]:hover {
-    background: lightgray !important;
-}
-
-input[type=button]:active {
-    background: silver !important;
 }
 
 #resetall:hover {
