--- a/style.css
+++ b/style.css
@@ -94,6 +94,13 @@ input[type=button]:active {
     color: white;
 }
 
+#running {
+    font-size: 1.5em;
+    font-style: italic;
+    font-weight: bold;
+    margin: 10px;
+}
+
 .options {
     display: none;
     color: black;
